# expense-share

./: .dockerignore  .env.example  .gitignore  AZURE_DEPLOYMENT.md  CONFIGURATION_FIXES.md  DOCKER_README.md  README.md  check-config.sh  deploy-azure.sh  docker-compose.yml
.github/workflows/: azure-deploy.yml
expenses_backend/: .env  .gitignore  Cargo.toml  Dockerfile
expenses_backend/.sqlx/: query-3f18d9478608907c319fa9da77bce6a50cacf5ea222dd4d2e1c781d43e8359b1.json  query-5cfde880b9d382507a5a757303e82db35bd628a9d9e03faec9c6ded63bdcaba0.json  query-8f40cd03bedf52de27d184e9a83055c384e39b33c2b1093a3e3b8646b7522d34.json  query-c36d62e734a741b52b095d8e4712674b4fbb0a6ce0a511b69f2550f704d8552f.json  query-eed5b937ad4e5014c3d0e621fef26befd911708642d517baba87fd8b2b802796.json
expenses_backend/migrations/: 20250902144339_create_expenses_table.sql
expenses_backend/src/: auth.rs  autherrors.rs  authservice.rs  database.rs  handlers.rs  lib.rs  main.rs  models.rs
expenses_backend/src/errors/: apperrors.rs  autherrors.rs  dberrors.rs  expenseerrors.rs  grouperrors.rs  mod.rs  usererrors.rs  validationerrors.rs
expenses_frontend/: Dockerfile  README.md  angular.json  docker-entrypoint.sh  netlify.toml  nginx.conf  package-lock.json  package.json  vercel.json
expenses_frontend/public/: _redirects
expenses_frontend/src/: index.html  styles.css
expenses_frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
expenses_frontend/src/environments/: environment.development.ts  environment.ts
(+16 files in other folders)
