[package]
name = "expenses_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
dotenv = "0.15"
rust_decimal = { version = "1", features = ["db-postgres"] }
env_logger = "0.11.8"
